name:                Famihask
version:             0.1.0.0
synopsis:            NES emulator in Haskell
homepage:            http://github.com/rkoeninger/Famihask
license:             MIT
license-file:        LICENSE.txt
author:              rkoeninger
maintainer:          rkoeninger@att.net
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable Famihask
  main-is:             Main.hs
  build-depends:       base, GLUT, OpenGL
  hs-source-dirs:      src
  default-language:    Haskell2010