name:                GameCom
version:             0.1.0.0
synopsis:            NES emulator in Haskell
homepage:            https://github.com/rkoeninger/GameCom
license:             MIT
license-file:        LICENSE.txt
author:              Robert Koeninger
maintainer:          rkoeninger@att.net
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/rkoeninger/GameCom

library
  exposed-modules:     GameCom, Memory, CPU, ROM
  other-modules:       APU, PPU
  build-depends:       base, data-default, primitive, bytestring, attoparsec, persistent-vector
  hs-source-dirs:      src/lib
  default-language:    Haskell2010

executable GameCom
  main-is:             Main.hs
  build-depends:       base, GameCom
  hs-source-dirs:      src/main
  default-language:    Haskell2010

test-suite test-all
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       base, bytestring, hspec, GameCom
  hs-source-dirs:      test
  default-language:    Haskell2010
