name:                GameCom
version:             0.1.0.0
synopsis:            NES emulator in Haskell
homepage:            https://github.com/rkoeninger/GameCom
license:             MIT
license-file:        LICENSE.txt
author:              Robert Koeninger
maintainer:          rkoeninger@att.net
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/rkoeninger/GameCom

library
  exposed-modules:     APU,
                       Base,
                       CPU,
                       GameCom,
                       Memory,
                       PPU,
                       ROM
  build-depends:       attoparsec,
                       base,
                       bytestring,
                       containers,
                       data-default,
                       primitive
  hs-source-dirs:      src/lib
  ghc-options:         -fsimpl-tick-factor=800
  default-language:    Haskell2010

executable GameCom
  main-is:             Main.hs
  build-depends:       base,
                       bytestring,
                       data-default,
                       directory,
                       GameCom,
                       sdl2
  hs-source-dirs:      src/main
  default-language:    Haskell2010

test-suite test-all
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       base,
                       bytestring,
                       containers,
                       data-default,
                       GameCom,
                       hspec
  hs-source-dirs:      src/test
  default-language:    Haskell2010
